--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,5 +3,6 @@
 
     <string name="hello">Hello World, MainActivity!</string>
     <string name="app_name">FeedReader</string>
+    <string name="StringLocal">Notification</string>
 
 </resources>
